@@ -93,8 +93,8 @@ So yes... i called the Rices with the names of some of my ex girlfriends.
 <details>
 <summary><b>Extra wallpapers in Andrea</b></summary>
 
-|<img src="config/bspwm/rices/andrea/wall-02.webp" alt="Andrea Rice" align="center" width="150px">|<img src="config/bspwm/rices/andrea/wall-03.webp" alt="Andrea Rice" align="center" width="150px">|<img src="config/bspwm/rices/andrea/wall-04.webp" alt="Andrea Rice" align="center" width="150px">|
-|---|---|---|
+|<img src="config/bspwm/rices/andrea/wall-02.webp" alt="Andrea Rice" align="center" width="150px">|<img src="config/bspwm/rices/andrea/wall-03.webp" alt="Andrea Rice" align="center" width="150px">|<img src="config/bspwm/rices/andrea/wall-04.webp" alt="Andrea Rice" align="center" width="150px">|<img src="config/bspwm/rices/andrea/wall-05.webp" alt="Andrea Rice" align="center" width="150px">|
+|---|---|---|---|
 
 </details>
 
