@@ -6,7 +6,7 @@ ID="$(ip link | awk '/state UP/ {print $2}')"
 SSID="$(iwgetid -r)"
 
 net_stat () {
-	if (ping -c 1 archlinux.org || ping -c 1 google.com || ping -c 1 bitbucket.org || ping -c 1 github.com || ping -c 1 sourceforge.net) &>/dev/null; then
+	if (ping -c 1 archlinux.org || ping -c 1 google.com) &>/dev/null; then
 		if [[ $ID == e* ]]; then
 			echo "Online"
 			echo "images/icons/system/wifi.png"
