@@ -1,6 +1,7 @@
 (17/Sept/2022)
-- [z0mbi3 Rice] Replaced ALSA utilities with Pulseaudio, because everyone uses pulseaudio, there is no need to use alsa to set volume values.
+- [z0mbi3 Rice] [Andrea Rice ]Replaced ALSA utilities with Pulseaudio, because everyone uses pulseaudio, there is no need to use alsa to set volume values.
 - Removed alsa-utilities in dependencies section, added pamixer to dependencies.
+- Clean code in scripts in that 2 rices
 
 (14/Sept/2022)
 - [z0mbi3 rice][Fix] Sometimes the workspaces section get freezed. Not very often but more than expected.
